# my_course_work_3

./: README.md  main.py  pyproject.toml  utils.py
tests/: test_utils.py
